...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/youtube_player_fragment" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnBlackScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="18dp"
        android:clickable="true"
        android:contentDescription="@string/videoPage_lights_out_button_info"
        android:src="@drawable/blackscreen_turnon"
        app:backgroundTint="#8E8E8E"
        app:layout_constraintBottom_toTopOf="@+id/btnPreferences"
        app:layout_constraintEnd_toEndOf="parent"
        android:focusable="true" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/videoPage_set_timer"
...
        android:id="@+id/tvBlackScreen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#000000"
        android:elevation="2dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/svExtras"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/youtube_fragment" />

    <TextView
        android:id="@+id/tvTitle"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="1dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="#A1A1A1"
                android:elevation="1dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/videoPage_description"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:elevation="1dp"
                android:isScrollContainer="true"
                android:nestedScrollingEnabled="true"
...
                android:text="@string/sample_text"
                android:textColor="#353535"
                android:textIsSelectable="true"
                android:visibility="gone" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swComments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="#A1A1A1"
                android:elevation="1dp"
                android:paddingStart="5dp"
...
                android:text="@string/videoPage_comments"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvComments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:elevation="1dp"
                android:isScrollContainer="true"
                android:nestedScrollingEnabled="false"
...
                android:paddingEnd="5dp"
                android:visibility="gone">

            </androidx.recyclerview.widget.RecyclerView>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swRelatedVideos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="#A1A1A1"
                android:elevation="1dp"
                android:paddingStart="5dp"
...
