...
            style="@android:style/Holo.ButtonBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:backgroundTint="#00FFFFFF"
...
                android:text="4"
                android:textColor="#FFFFFF"
                android:textSize="36sp"
                app:rippleColor="#90878787" />

            <Button
                android:id="@+id/btn5"

                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
...
            style="@android:style/Holo.ButtonBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/btnBackspace"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#D31717"
                android:contentDescription="@string/timerMenu_backspace"
                android:longClickable="true"
...
                android:text="0"
                android:textColor="#FFFFFF"
                android:textSize="36sp"
                app:rippleColor="#90878787" />

            <ImageButton
                android:id="@+id/btnStart"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#36C50E"
                android:contentDescription="@string/timerMenu_starttimer"
                android:scaleType="centerInside"
...
